welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value i
	var tab= new Array[Color](i)
                                  ^Array1:6: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
	for (i<-0 to taille-1) {getCouleurSol()}}
              ^Array1:7: error: not enough arguments for method remplirTab: (taille: Int)Array[java.awt.Color].
Unspecified value parameter taille.
	remplirTab() 
                  ^